Fixed pdf-footer contents alignement

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,6 +2,7 @@
   @include background-cover('../assets/pdf-footer.svg', top center);
 
   display: flex;
+  position: relative;
   align-items: center;
   height: 5em;
   padding-top: 3em;
